@@ -43,7 +43,8 @@
       - Crude regular expression search is supported. [b8]
       - New searches now start within the current viewport where possible. [b8]
     • Text editing improvements, including:
-      - Added t_gu, t_gU, and v_o. [b8]
+      - Added t_gu, t_gU, and v_o mappings. [b8]
+      - Added o_c, o_d, and o_y mappings. [b8]
       - Added operator modes and proper first class motion maps. [b8]
       - Improved undo support for most mappings. [b8]
     • General completion improvements
